tests/snapshots/aether/aether__aether__verify_aether__dump_core.snap
---
source: tests/aether_cli_snapshots.rs
assertion_line: 75
---
letrec my_map =
λxs, f.
    case xs of
      ::(h, t) →
        let %t1 = aether_call[owned] f(h)
        let %t2 = aether_call[borrowed, borrowed] my_map(t, f)
        reuse xs ::(%t1, %t2)
      _ →
        []

letrec option_map =
λopt, f.
    case opt of
      Some(x) →
        let %t3 = aether_call[owned] f(x)
        reuse opt Some(%t3)
      _ →
        None

letrec set_black =
λt.
    case t of
      Node(_, left, key, right) →
        reuse t Node(Black, left, key, right) @mask=0b1
      _ →
        t

letrec my_len =
λxs.
    case xs of
      ::(_, t) →
        let %t4 = aether_call[borrowed] my_len(t)
        Add(1, %t4)
      _ →
        0

letrec my_filter =
λxs, f.
    case xs of
      ::(h, t) →
        drop_spec xs {
          unique -> let %t5 = aether_call[owned] f(h)
            case %t5 of
              true →
                let %t6 = aether_call[borrowed, borrowed] my_filter(t, f)
                reuse xs ::(h, %t6) @mask=0b10
              _ →
                drop h
                aether_call[borrowed, borrowed] my_filter(t, f)
          shared -> let %t5 = aether_call[owned] f(dup h
            h)
            case %t5 of
              true →
                let %t6 = aether_call[borrowed, borrowed] my_filter(t, f)
                ::(h, %t6)
              _ →
                drop h
                aether_call[borrowed, borrowed] my_filter(t, f)
        }
      _ →
        []

letrec my_sum =
λxs.
    case xs of
      ::(h, t) →
        let %t7 = aether_call[borrowed] my_sum(t)
        Add(h, %t7)
      _ →
        0

def main =
let %t8 = (let %t9 = (let %t10 = MakeList(1, 2, 3)
  let %t11 = (λx.
    Mul(x, 2))
  aether_call[borrowed, borrowed] my_map(%t10, %t11))
  aether_call[borrowed] print(%t9))
  drop %t8
  let %t12 = (let %t13 = (let %t14 = Some(42)
  let %t15 = (λx.
    Add(x, 1))
  aether_call[borrowed, borrowed] option_map(%t14, %t15))
  aether_call[borrowed] print(%t13))
  drop %t12
  let %t16 = (let %t17 = (let %t18 = aether_call[owned, owned, owned, owned] Node(Red, Leaf, 5, Leaf)
  aether_call[owned] set_black(%t18))
  aether_call[borrowed] print(%t17))
  drop %t16
  let %t19 = (let %t20 = (let %t21 = MakeList(1, 2, 3, 4, 5)
  aether_call[borrowed] my_len(%t21))
  aether_call[borrowed] print(%t20))
  drop %t19
  let %t22 = (let %t23 = (let %t24 = MakeList(1, 2, 3, 4, 5, 6)
  let %t25 = (λx.
    let %t26 = Mod(x, 2)
    Eq(%t26, 0))
  aether_call[borrowed, borrowed] my_filter(%t24, %t25))
  aether_call[borrowed] print(%t23))
  drop %t22
  let %t27 = (let %t28 = MakeList(1, 2, 3, 4, 5)
  aether_call[borrowed] my_sum(%t28))
  aether_call[borrowed] print(%t27)

── Aether stats ──
Dups: 1  Drops: 7  Reuses: 4  DropSpecs: 1  FBIP: fbip(2)
Warning: FBIP Contract Not Proven

@fip on `my_map` analysis result NotProvable:
- calls indirect or opaque callee `f` whose FBIP behavior is unknown
- control-flow join loses a precise allocation bound across paths

  examples/aether/verify_aether.flx:9:6
   |
 9 | @fip fn my_map(xs, f) {
   |      ^^^^^^^^^^^^^^^^^^
10 |     match xs {
   | ^^^^^^^^^^^^^^
11 |         [h | t] -> [f(h) | my_map(t, f)],
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
12 |         _ -> [],
   | ^^^^^^^^^^^^^^^^
13 |     }
   | ^^^^^
14 | }
   | ^


Warning: FBIP Contract Not Proven

@fip on `option_map` analysis result NotProvable:
- calls indirect or opaque callee `f` whose FBIP behavior is unknown
- control-flow join loses a precise allocation bound across paths

  examples/aether/verify_aether.flx:17:6
   |
17 | @fip fn option_map(opt, f) {
   |      ^^^^^^^^^^^^^^^^^^^^^^^
18 |     match opt {
   | ^^^^^^^^^^^^^^^
19 |         Some(x) -> Some(f(x)),
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
20 |         _ -> None,
   | ^^^^^^^^^^^^^^^^^^
21 |     }
   | ^^^^^
22 | }
   | ^

Found 2 warnings.
