tests/snapshots/aether/aether__aether__verify_aether__dump_core_debug.snap
---
source: tests/aether_cli_snapshots.rs
---
letrec my_map : List<Any> =
λxs#1, f#2.
    case xs#1 of
      ::(h#3, t#4) →
        let %t1 = aether_call[owned] f#2(dup h#3
        h#3)
        let %t2 = aether_call[borrowed, borrowed] my_map#0(t#4, f#2)
        ::(#4000043[synthetic]#43, #4000044[synthetic]#44)
      _ →
        []

letrec option_map : Option<Any> =
λopt#6, f#7.
    case opt#6 of
      Some(x#8) →
        let %t3 = aether_call[owned] f#7(dup x#8
        x#8)
        Some(#4000045[synthetic]#45)
      _ →
        None

letrec set_black : Tree =
λt#10.
    case t#10 of
      Node(_, left#11, key#12, right#13) →
        drop_spec t#10 {
          unique -> reuse t#10 Node(Black#?[external], left#11, key#12, right#13) @mask=0b1
          shared -> aether_call[owned, owned, owned, owned] Node#?[external](Black#?[external], dup left#11
            left#11, dup key#12
            key#12, dup right#13
            right#13)
        }
      _ →
        t#10

letrec my_len : Int =
λxs#15.
    case xs#15 of
      ::(_, t#16) →
        let %t4 = aether_call[borrowed] my_len#14(t#16)
        Add(1, #4000046[synthetic]#46)
      _ →
        0

letrec my_filter : List<Any> =
λxs#18, f#19.
    case xs#18 of
      ::(h#20, t#21) →
        let %t5 = aether_call[owned] f#19(dup h#20
        h#20)
        case #4000047[synthetic]#47 of
          true →
            let %t6 = aether_call[borrowed, borrowed] my_filter#17(t#21, f#19)
            ::(dup h#20
            h#20, #4000048[synthetic]#48)
          _ →
            drop h#20
            aether_call[borrowed, borrowed] my_filter#17(t#21, f#19)
      _ →
        []

letrec my_sum : Any =
λxs#23.
    case xs#23 of
      ::(h#24, t#25) →
        let %t7 = aether_call[borrowed] my_sum#22(t#25)
        Add(h#24, #4000049[synthetic]#49)
      _ →
        0

letrec main : Any =
λ.
    let %t8 = (let %t9 = (let %t10:Box = MakeList(1, 2, 3)
    let %t11:Box = (λx#42.
      Mul(x#42, 2))
    aether_call[borrowed, borrowed] my_map#0(#4000050[synthetic]#50, #4000051[synthetic]#51))
    Print(#4000052[synthetic]#52))
    drop #2000004[synthetic]#40
    let %t12 = (let %t13 = (let %t14:Box = Some(42)
    let %t15:Box = (λx#39.
      Add(x#39, 1))
    aether_call[borrowed, borrowed] option_map#5(#4000053[synthetic]#53, #4000054[synthetic]#54))
    Print(#4000055[synthetic]#55))
    drop #2000003[synthetic]#37
    let %t16 = (let %t17 = (let %t18 = aether_call[owned, owned, owned, owned] Node#?[external](Red#?[external], Leaf#?[external], 5, Leaf#?[external])
    aether_call[owned] set_black#9(#4000056[synthetic]#56))
    Print(#4000057[synthetic]#57))
    drop #2000002[synthetic]#34
    let %t19 = (let %t20 = (let %t21:Box = MakeList(1, 2, 3, 4, 5)
    aether_call[borrowed] my_len#14(#4000058[synthetic]#58))
    Print(#4000059[synthetic]#59))
    drop #2000001[synthetic]#31
    let %t22 = (let %t23 = (let %t24:Box = MakeList(1, 2, 3, 4, 5, 6)
    let %t25:Box = (λx#30.
      let %t26 = Mod(x#30, 2)
      Eq(#4000061[synthetic]#61, 0))
    aether_call[borrowed, borrowed] my_filter#17(#4000060[synthetic]#60, #4000062[synthetic]#62))
    Print(#4000063[synthetic]#63))
    drop #2000000[synthetic]#28
    let %t27 = (let %t28:Box = MakeList(1, 2, 3, 4, 5)
    aether_call[borrowed] my_sum#22(#4000064[synthetic]#64))
    Print(#4000065[synthetic]#65)

── Aether stats ──
Dups: 7  Drops: 6  Reuses: 1  DropSpecs: 1  FBIP: fbip(4)
Warning: FBIP Contract Not Proven

@fip on `my_map` analysis result NotProvable:
- fresh heap allocation remains on at least one path
- calls indirect or opaque callee `f` whose FBIP behavior is unknown
- control-flow join loses a precise allocation bound across paths

  examples/aether/verify_aether.flx:9:6
   |
 9 | @fip fn my_map(xs, f) {
   |      ^^^^^^^^^^^^^^^^^^
10 |     match xs {
   | ^^^^^^^^^^^^^^
11 |         [h | t] -> [f(h) | my_map(t, f)],
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
12 |         _ -> [],
   | ^^^^^^^^^^^^^^^^
13 |     }
   | ^^^^^
14 | }
   | ^


Warning: FBIP Contract Not Proven

@fip on `option_map` analysis result NotProvable:
- fresh heap allocation remains on at least one path
- calls indirect or opaque callee `f` whose FBIP behavior is unknown
- control-flow join loses a precise allocation bound across paths

  examples/aether/verify_aether.flx:17:6
   |
17 | @fip fn option_map(opt, f) {
   |      ^^^^^^^^^^^^^^^^^^^^^^^
18 |     match opt {
   | ^^^^^^^^^^^^^^^
19 |         Some(x) -> Some(f(x)),
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
20 |         _ -> None,
   | ^^^^^^^^^^^^^^^^^^
21 |     }
   | ^^^^^
22 | }
   | ^

Found 2 warnings.
