tests/snapshots/aether/aether__aether__verify_aether__trace_aether_jit.snap
---
source: tests/aether_cli_snapshots.rs
---
Warning: FBIP Contract Not Proven

@fip on `my_map` analysis result NotProvable:
- calls indirect or opaque callee `f` whose FBIP behavior is unknown
- control-flow join loses a precise allocation bound across paths

  examples/aether/verify_aether.flx:9:6
   |
 9 | @fip fn my_map(xs, f) {
   |      ^^^^^^^^^^^^^^^^^^
10 |     match xs {
   | ^^^^^^^^^^^^^^
11 |         [h | t] -> [f(h) | my_map(t, f)],
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
12 |         _ -> [],
   | ^^^^^^^^^^^^^^^^
13 |     }
   | ^^^^^
14 | }
   | ^


Warning: FBIP Contract Not Proven

@fip on `option_map` analysis result NotProvable:
- calls indirect or opaque callee `f` whose FBIP behavior is unknown
- control-flow join loses a precise allocation bound across paths

  examples/aether/verify_aether.flx:17:6
   |
17 | @fip fn option_map(opt, f) {
   |      ^^^^^^^^^^^^^^^^^^^^^^^
18 |     match opt {
   | ^^^^^^^^^^^^^^^
19 |         Some(x) -> Some(f(x)),
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
20 |         _ -> None,
   | ^^^^^^^^^^^^^^^^^^
21 |     }
   | ^^^^^
22 | }
   | ^

Found 2 warnings.


── Aether Trace ──
file: examples/aether/verify_aether.flx
backend: jit
pipeline: AST -> Core -> CFG -> Cranelift JIT
optimize: off
analyze: off
strict: on
modules: 1
────────────────────────
Aether Memory Model Report
==========================

── fn my_map @fip ──
  Dups: 0  Drops: 0  Reuses: 1  DropSpecs: 0  FBIP: fip
  FreshAllocs: 0
  verifier: ok
  fbip: NotProvable
    - calls indirect or opaque callee `f` whose FBIP behavior is unknown
    - control-flow join loses a precise allocation bound across paths
λxs, f.
  case xs of
    ::(h, t) →
      let %t1 = aether_call[owned] f(h)
      let %t2 = aether_call[borrowed, borrowed] my_map(t, f)
      reuse xs ::(%t1, %t2)
    _ →
      []
── fn option_map @fip ──
  Dups: 0  Drops: 0  Reuses: 1  DropSpecs: 0  FBIP: fip
  FreshAllocs: 0
  verifier: ok
  fbip: NotProvable
    - calls indirect or opaque callee `f` whose FBIP behavior is unknown
    - control-flow join loses a precise allocation bound across paths
λopt, f.
  case opt of
    Some(x) →
      let %t1 = aether_call[owned] f(x)
      reuse opt Some(%t1)
    _ →
      None
── fn set_black ──
  Dups: 0  Drops: 0  Reuses: 1  DropSpecs: 0  FBIP: fip
  FreshAllocs: 0
  verifier: ok
λt.
  case t of
    Node(_, left, key, right) →
      reuse t Node(Black, left, key, right) @mask=0b1
    _ →
      t
── fn my_filter ──
  Dups: 1  Drops: 2  Reuses: 1  DropSpecs: 1  FBIP: fbip(1)
  FreshAllocs: 1
  verifier: ok
λxs, f.
  case xs of
    ::(h, t) →
      drop_spec xs {
        unique -> let %t1 = aether_call[owned] f(h)
          case %t1 of
            true →
              let %t2 = aether_call[borrowed, borrowed] my_filter(t, f)
              reuse xs ::(h, %t2) @mask=0b10
            _ →
              drop h
              aether_call[borrowed, borrowed] my_filter(t, f)
        shared -> let %t1 = aether_call[owned] f(dup h
          h)
          case %t1 of
            true →
              let %t2 = aether_call[borrowed, borrowed] my_filter(t, f)
              ::(h, %t2)
            _ →
              drop h
              aether_call[borrowed, borrowed] my_filter(t, f)
      }
    _ →
      []
── fn main ──
  Dups: 0  Drops: 5  Reuses: 0  DropSpecs: 0  FBIP: fbip(1)
  FreshAllocs: 1
  verifier: ok
λ.
  let %t1 = (let %t2 = (let %t3 = MakeList(1, 2, 3)
  let %t4 = (λx.
    Mul(x, 2))
  aether_call[borrowed, borrowed] my_map(%t3, %t4))
  aether_call[borrowed] print(%t2))
  drop %t1
  let %t5 = (let %t6 = (let %t7 = Some(42)
  let %t8 = (λx.
    Add(x, 1))
  aether_call[borrowed, borrowed] option_map(%t7, %t8))
  aether_call[borrowed] print(%t6))
  drop %t5
  let %t9 = (let %t10 = (let %t11 = aether_call[owned, owned, owned, owned] Node(Red, Leaf, 5, Leaf)
  aether_call[owned] set_black(%t11))
  aether_call[borrowed] print(%t10))
  drop %t9
  let %t12 = (let %t13 = (let %t14 = MakeList(1, 2, 3, 4, 5)
  aether_call[borrowed] my_len(%t14))
  aether_call[borrowed] print(%t13))
  drop %t12
  let %t15 = (let %t16 = (let %t17 = MakeList(1, 2, 3, 4, 5, 6)
  let %t18 = (λx.
    let %t19 = Mod(x, 2)
    Eq(%t19, 0))
  aether_call[borrowed, borrowed] my_filter(%t17, %t18))
  aether_call[borrowed] print(%t16))
  drop %t15
  let %t20 = (let %t21 = MakeList(1, 2, 3, 4, 5)
  aether_call[borrowed] my_sum(%t21))
  aether_call[borrowed] print(%t20)

── Total ──
  Dups: 1  Drops: 7  Reuses: 4  DropSpecs: 1  FBIP: fbip(2)
  FreshAllocs: 2

[2, 4, 6]
Some(43)
Node(Black, Leaf, 5, Leaf)
5
[2, 4, 6]
15
