tests/snapshots/aether/aether__aether__verify_aether__trace_aether_llvm.snap
---
source: tests/aether/cli_snapshots.rs
---
[1 of 1] Compiling  verify_aether
[lir→llvm] Compiling via per-module LLVM native backend...
[1 of 1] Linking    verify_aether
• 2 warnings • examples/aether/verify_aether.flx
Warning: FBIP Contract Not Proven

@fip on `my_map` analysis result NotProvable:
- fresh heap allocation remains on at least one path
- calls indirect or opaque callee `f` whose FBIP behavior is unknown
- control-flow join loses a precise allocation bound across paths

  examples/aether/verify_aether.flx:20:6
   |
20 | @fip fn my_map(xs, f) {
   |      ^^^^^^^^^^^^^^^^


Warning: FBIP Contract Not Proven

@fip on `option_map` analysis result NotProvable:
- fresh heap allocation remains on at least one path
- calls indirect or opaque callee `f` whose FBIP behavior is unknown
- control-flow join loses a precise allocation bound across paths

  examples/aether/verify_aether.flx:28:6
   |
28 | @fip fn option_map(opt, f) {
   |      ^^^^^^^^^^^^^^^^^^^^^

Found 2 warnings.


── Aether Trace ──
file: <workspace>/examples/aether/verify_aether.flx
backend: native
pipeline: AST -> Core -> LIR -> LLVM -> native
cache: enabled
optimize: off
analyze: off
strict: off
modules: 1
────────────────────────
Aether Ownership Report
=======================

Note: Reuses and FBIP describe the Aether planner. BorrowedCallGuards are native call-site Dup/Drop safeguards; guarded calls may suppress a callee's reuse for those arguments.

── fn my_map @fip ──
  Dups: 0  Drops: 0  Reuses: 1  DropSpecs: 0  BorrowedCallGuards: 0  FBIP: fip
  FreshAllocs: 0
  verifier: ok
  fbip: NotProvable
    - calls indirect or opaque callee `f` whose FBIP behavior is unknown
    - control-flow join loses a precise allocation bound across paths
lam(xs, f) ->
  case xs#1 of
    Cons(h, t) ->
      let <sym:4000066> =
        aether_call[owned] f#2(h#3)
      let <sym:4000067> =
        aether_call[borrowed, borrowed] my_map#0(t#4, f#2)
      reuse xs#1 as Cons(<sym:4000066>#66, <sym:4000067>#67)
    _ ->
      Nil
── fn option_map @fip ──
  Dups: 0  Drops: 0  Reuses: 1  DropSpecs: 0  BorrowedCallGuards: 0  FBIP: fip
  FreshAllocs: 0
  verifier: ok
  fbip: NotProvable
    - calls indirect or opaque callee `f` whose FBIP behavior is unknown
    - control-flow join loses a precise allocation bound across paths
lam(opt, f) ->
  case opt#6 of
    Some(x) ->
      let <sym:4000068> =
        aether_call[owned] f#7(x#8)
      reuse opt#6 as Some(<sym:4000068>#68)
    _ ->
      None
── fn set_black ──
  Dups: 0  Drops: 0  Reuses: 1  DropSpecs: 0  BorrowedCallGuards: 0  FBIP: fip
  FreshAllocs: 0
  verifier: ok
lam(t) ->
  case t#10 of
    Node(_, left, key, right) ->
      reuse t#10 as Node mask=0x1(Black, left#11, key#12, right#13)
    _ ->
      t#10
── fn my_filter ──
  Dups: 1  Drops: 0  Reuses: 1  DropSpecs: 1  BorrowedCallGuards: 0  FBIP: fbip(1)
  FreshAllocs: 1
  verifier: ok
lam(xs, f) ->
  case xs#18 of
    Cons(h, t) ->
      drop_specialized xs#18 {
        unique ->
          let <sym:4000070> =
            aether_call[owned] f#19(h#20)
          case <sym:4000070>#70 of
            true ->
              let <sym:4000071> =
                aether_call[borrowed, borrowed] my_filter#17(t#21, f#19)
              reuse xs#18 as Cons mask=0x2(h#20, <sym:4000071>#71)
            _ ->
              aether_call[borrowed, borrowed] my_filter#17(t#21, f#19)
        shared ->
          let <sym:4000070> =
            aether_call[owned] f#19(dup h#20 in h#20)
          case <sym:4000070>#70 of
            true ->
              let <sym:4000071> =
                aether_call[borrowed, borrowed] my_filter#17(t#21, f#19)
              Cons(h#20, <sym:4000071>#71)
            _ ->
              aether_call[borrowed, borrowed] my_filter#17(t#21, f#19)
      }
    _ ->
      Nil
── fn main [handle×5] ──
  Dups: 0  Drops: 21  Reuses: 0  DropSpecs: 0  BorrowedCallGuards: 0  FBIP: fbip(1)  Yields: 0  Handles: 5  HandlerArms: 11
  FreshAllocs: 1
  verifier: ok
lam() ->
  let <sym:6000073> =
    lam(__resume_default, __arg0, __arg1) ->
      let <sym:4000090> =
        ProcRun(__arg0#63, __arg1#64)
      aether_call[owned] __resume_default#65(<sym:4000090>#90)
  drop <sym:6000073>#73 in
    handle /*evv_insert+yield_prompt*/ let <sym:6000074> = lam(__resume_default, __arg0) -> let <sym:4000091> = EnvVar(__arg0#58) aether_call[owned] __resume_default#59(<sym:4000091>#91) drop <sym:6000074>#74 in let <sym:6000075> = lam(__resume_default) -> let <sym:4000092> = EnvArgs() aether_call[owned] __resume_default#60(<sym:4000092>#92) drop <sym:6000075>#75 in let <sym:6000076> = lam(__resume_default) -> let <sym:4000093> = EnvCwd() aether_call[owned] __resume_default#61(<sym:4000093>#93) drop <sym:6000076>#76 in let <sym:6000077> = lam(__resume_default) -> let <sym:4000094> = EnvHomeDir() aether_call[owned] __resume_default#62(<sym:4000094>#94) drop <sym:6000077>#77 in handle /*evv_insert+yield_prompt*/ let <sym:6000078> = lam(__resume_default) -> let <sym:4000095> = ReadStdin() aether_call[owned] __resume_default#57(<sym:4000095>#95) drop <sym:6000078>#78 in handle /*evv_insert+yield_prompt*/ let <sym:6000079> = lam(__resume_default, __arg0) -> let <sym:4000096> = ReadFile(__arg0#49) aether_call[owned] __resume_default#50(<sym:4000096>#96) drop <sym:6000079>#79 in let <sym:6000080> = lam(__resume_default, __arg0) -> let <sym:4000097> = ReadLines(__arg0#51) aether_call[owned] __resume_default#52(<sym:4000097>#97) drop <sym:6000080>#80 in let <sym:6000081> = lam(__resume_default, __arg0, __arg1) -> let <sym:2000007> = WriteFile(__arg0#53, __arg1#54) drop <sym:2000007>#56 in let <sym:4000098> = MakeTuple() aether_call[owned] __resume_default#55(<sym:4000098>#98) drop <sym:6000081>#81 in handle /*evv_insert+yield_prompt*/ let <sym:6000082> = lam(__resume_default, __arg0) -> let <sym:2000005> = Print(__arg0#43) drop <sym:2000005>#45 in let <sym:4000099> = MakeTuple() aether_call[owned] __resume_default#44(<sym:4000099>#99) let <sym:6000083> = lam(__resume_default, __arg0) -> let <sym:2000006> = Println(__arg0#46) drop <sym:2000006>#48 in let <sym:4000100> = MakeTuple() aether_call[owned] __resume_default#47(<sym:4000100>#100) drop <sym:6000083>#83 in handle /*evv_insert+yield_prompt*/ let result = let <sym:4000101> = MakeList(1, 2, 3) let <sym:4000102> = lam(x) -> IMul(x#42, 2) aether_call[borrowed, borrowed] my_map#0(<sym:4000101>#101, <sym:4000102>#102) let <sym:2000004> = let <sym:4000103> = lam(<sym:6000084>) -> <sym:6000084>#84 aether_call[owned, owned] <sym:6000082>#82(<sym:4000103>#103, result#41) drop <sym:2000004>#40 in let opt = let <sym:4000104> = Some(42) let <sym:4000105> = lam(x) -> IAdd(x#39, 1) aether_call[borrowed, borrowed] option_map#5(<sym:4000104>#104, <sym:4000105>#105) let <sym:2000003> = let <sym:4000106> = lam(<sym:6000085>) -> <sym:6000085>#85 aether_call[owned, owned] <sym:6000082>#82(<sym:4000106>#106, opt#38) drop <sym:2000003>#37 in let tree = aether_call[owned, owned, owned, owned] Node(Red, Leaf, 5, Leaf) let blk = aether_call[owned] set_black#9(tree#36) let <sym:2000002> = let <sym:4000107> = lam(<sym:6000086>) -> <sym:6000086>#86 aether_call[owned, owned] <sym:6000082>#82(<sym:4000107>#107, blk#35) drop <sym:2000002>#34 in let n = let <sym:4000108> = MakeList(1, 2, 3, 4, 5) aether_call[borrowed] my_len#14(<sym:4000108>#108) let <sym:2000001> = let <sym:4000109> = lam(<sym:6000087>) -> <sym:6000087>#87 aether_call[owned, owned] <sym:6000082>#82(<sym:4000109>#109, n#32) drop <sym:2000001>#31 in let evens = let <sym:4000110> = MakeList(1, 2, 3, 4, 5, 6) let <sym:4000112> = lam(x) -> let <sym:4000111> = IMod(x#30, 2) ICmpEq(<sym:4000111>#111, 0) aether_call[borrowed, borrowed] my_filter#17(<sym:4000110>#110, <sym:4000112>#112) let <sym:2000000> = let <sym:4000113> = lam(<sym:6000088>) -> <sym:6000088>#88 aether_call[owned, owned] <sym:6000082>#82(<sym:4000113>#113, evens#29) drop <sym:2000000>#28 in let total = let <sym:4000114> = MakeList(1, 2, 3, 4, 5) aether_call[borrowed] my_sum#22(<sym:4000114>#114) let <sym:4000115> = lam(<sym:6000089>) -> <sym:6000089>#89 aether_call[owned, owned] <sym:6000082>#82(<sym:4000115>#115, total#27) with Console print(__resume_default, __arg0) -> let <sym:2000005> = Print(__arg0#43) drop <sym:2000005>#45 in let <sym:4000116> = MakeTuple() aether_call[owned] __resume_default#44(<sym:4000116>#116) println(__resume_default, __arg0) -> let <sym:2000006> = Println(__arg0#46) drop <sym:2000006>#48 in let <sym:4000117> = MakeTuple() aether_call[owned] __resume_default#47(<sym:4000117>#117) with FileSystem read_file(__resume_default, __arg0) -> let <sym:4000118> = ReadFile(__arg0#49) aether_call[owned] __resume_default#50(<sym:4000118>#118) read_lines(__resume_default, __arg0) -> let <sym:4000119> = ReadLines(__arg0#51) aether_call[owned] __resume_default#52(<sym:4000119>#119) write_file(__resume_default, __arg0, __arg1) -> let <sym:2000007> = WriteFile(__arg0#53, __arg1#54) drop <sym:2000007>#56 in let <sym:4000120> = MakeTuple() aether_call[owned] __resume_default#55(<sym:4000120>#120) with Stdin read_stdin(__resume_default) -> let <sym:4000121> = ReadStdin() aether_call[owned] __resume_default#57(<sym:4000121>#121) with Env env_var(__resume_default, __arg0) -> let <sym:4000122> = EnvVar(__arg0#58) aether_call[owned] __resume_default#59(<sym:4000122>#122) env_args(__resume_default) -> let <sym:4000123> = EnvArgs() aether_call[owned] __resume_default#60(<sym:4000123>#123) env_cwd(__resume_default) -> let <sym:4000124> = EnvCwd() aether_call[owned] __resume_default#61(<sym:4000124>#124) env_home_dir(__resume_default) -> let <sym:4000125> = EnvHomeDir() aether_call[owned] __resume_default#62(<sym:4000125>#125) with Process
      proc_run(__resume_default, __arg0, __arg1) ->
        let <sym:4000126> =
          ProcRun(__arg0#63, __arg1#64)
        aether_call[owned] __resume_default#65(<sym:4000126>#126)

── Total ──
  Dups: 1  Drops: 21  Reuses: 4  DropSpecs: 1  BorrowedCallGuards: 0  FBIP: fbip(2)  Yields: 0  Handles: 5  HandlerArms: 11
  FreshAllocs: 2

[2, 4, 6]
Some(43)
Node(Black, Leaf, 5, Leaf)
5
[2, 4, 6]
15
